modify to running podman inside podman image in ubi8

--- a/podman/Containerfile
+++ b/podman/Containerfile
@@ -1,25 +1,4 @@
-# podman/Containerfile
-#
-# Build a Podman container image from the latest
-# stable version of Podman on the Fedoras Updates System.
-# https://bodhi.fedoraproject.org/updates/?search=podman
-# This image can be used to create a secured container
-# that runs safely with privileges within the container.
-#
-# FLAVOR defaults to stable if unset
-#
-# FLAVOR=stable    acquires a stable version of Podman
-#                   from the Fedoras Updates System.
-# FLAVOR=testing   acquires a testing version of Podman
-#                   from the Fedoras Updates System.
-# FLAVOR=upstream  acquires a testing version of Podman
-#                   from the Fedora Copr Buildsystem.
-#                   https://copr.fedorainfracloud.org/coprs/rhcontainerbot/podman-next/
-#
-# https://bodhi.fedoraproject.org/updates/?search=podman
-
-FROM registry.fedoraproject.org/fedora:latest
-ARG FLAVOR=stable
+FROM registry.access.redhat.com/ubi8/ubi:latest
 
 # When building for multiple-architectures in parallel using emulation
 # it's really easy for one/more dnf processes to timeout or mis-count
@@ -28,7 +7,7 @@ ARG FLAVOR=stable
 RUN echo -e "\n\n# Added during image build" >> /etc/dnf/dnf.conf && \
     echo -e "minrate=100\ntimeout=60\n" >> /etc/dnf/dnf.conf
 
-ARG INSTALL_RPMS="podman fuse-overlayfs openssh-clients ucpp"
+ARG INSTALL_RPMS="podman fuse-overlayfs openssh-clients crun"
 
 # Don't include container-selinux and remove
 # directories used by dnf that are just taking
@@ -39,48 +18,23 @@ ARG INSTALL_RPMS="podman fuse-overlayfs openssh-clients ucpp"
 RUN dnf -y makecache && \
     dnf -y update && \
     rpm --setcaps shadow-utils 2>/dev/null && \
-    case "${FLAVOR}" in \
-      stable) \
-        dnf -y install $INSTALL_RPMS --exclude container-selinux \
-      ;; \
-      testing) \
-        dnf -y install $INSTALL_RPMS --exclude container-selinux \
-            --enablerepo updates-testing \
-      ;; \
-      upstream) \
-        dnf -y install 'dnf-command(copr)' --enablerepo=updates-testing && \
-        dnf -y copr enable rhcontainerbot/podman-next && \
-        dnf -y install $INSTALL_RPMS \
-            --exclude container-selinux \
-            --enablerepo=updates-testing \
-      ;; \
-      *) \
-        printf "\\nFLAVOR argument must be set and valid, currently: '${FLAVOR}'\\n\\n" 1>&2 && \
-        exit 1 \
-      ;; \
-    esac && \
-    ln -s /usr/bin/ucpp /usr/local/bin/cpp && \
+    dnf -y install $INSTALL_RPMS --exclude container-selinux && \
     dnf clean all && \
     rm -rf /var/cache /var/log/dnf* /var/log/yum.*
 
-RUN useradd podman && \
+RUN useradd  podman && \
     echo -e "podman:1:999\npodman:1001:64535" > /etc/subuid && \
     echo -e "podman:1:999\npodman:1001:64535" > /etc/subgid
 
 ADD /containers.conf /etc/containers/containers.conf
 ADD /podman-containers.conf /home/podman/.config/containers/containers.conf
+ADD /storage.conf /etc/containers/storage.conf
 
 RUN mkdir -p /home/podman/.local/share/containers && \
     chown podman:podman -R /home/podman && \
-    chmod 644 /etc/containers/containers.conf
+    chmod 644 /etc/containers/containers.conf /etc/containers/storage.conf
 
-# Copy & modify the defaults to provide reference if runtime changes needed.
-# Changes here are required for running with fuse-overlay storage inside container.
-RUN sed -e 's|^#mount_program|mount_program|g' \
-           -e '/additionalimage.*/a "/var/lib/shared",' \
-           -e 's|^mountopt[[:space:]]*=.*$|mountopt = "nodev,fsync=0"|g' \
-           /usr/share/containers/storage.conf \
-           > /etc/containers/storage.conf
+
 
 # Setup internal Podman to pass subscriptions down from host to internal container
 RUN printf '/run/secrets/etc-pki-entitlement:/run/secrets/etc-pki-entitlement\n/run/secrets/rhsm:/run/secrets/rhsm\n' > /etc/containers/mounts.conf
