--- a/podman/containers.conf
+++ b/podman/containers.conf
@@ -8,5 +8,6 @@ cgroups="disabled"
 log_driver = "k8s-file"
 [engine]
 cgroup_manager = "cgroupfs"
+cgroup_version = "v2"
 events_logger="file"
 runtime="crun"
